--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kleros-pnk-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kleros Exercise D: Rock Paper Scissors Lizard Spock</title>
+    <title>Rock Paper Scissors Lizard Spock</title>
   </head>
   <body>
     <div id="root"></div>
